# smoothwheeld-cursor

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  plan.md
.cursor/rules/: smoothwheeld-plan.mdc
src/: cli.rs  config.rs  devices.rs  errors.rs  input.rs  logging.rs  main.rs  output.rs  smoother.rs
