[package]
name = "smoothwheeld"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Smooth mouse wheel input via evdev + uinput (Linux)"
repository = "https://github.com/example/smoothwheeld"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
evdev = "0.13"
glob = "0.3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
